--- a/data/cards/01295111.yaml
+++ b/data/cards/01295111.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-EN013
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SOFU-DE051
     set_name: Soul Fusion
@@ -73,6 +77,10 @@ sets:
     - Ultra Rare
   - set_number: MP19-DE194
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-DE013
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -92,6 +100,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-FR013
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SOFU-IT051
     set_name: Soul Fusion
@@ -109,6 +121,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-IT013
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SOFU-PT051
     set_name: Soul Fusion
@@ -124,6 +140,10 @@ sets:
     - Ultra Rare
   - set_number: MP19-PT194
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-PT013
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
