--- a/data/cards/05361647.yaml
+++ b/data/cards/05361647.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-EN040
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: LTGY-DE017
     set_name: Lord of the Tachyon Galaxy
@@ -62,6 +66,10 @@ sets:
     - Common
   - set_number: MP14-DE003
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-DE040
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -73,6 +81,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-FR040
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: LTGY-IT017
     set_name: Lord of the Tachyon Galaxy
@@ -82,6 +94,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-IT040
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: LTGY-PT017
     set_name: Lord of the Tachyon Galaxy
@@ -89,6 +105,10 @@ sets:
     - Common
   - set_number: MP14-PT003
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-PT040
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
