--- a/data/cards/32543380.yaml
+++ b/data/cards/32543380.yaml
@@ -60,6 +60,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-EN029
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE008
     set_name: Force of the Breaker
@@ -75,6 +79,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-DE029
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: FOTB-FR008
     set_name: Force of the Breaker
@@ -90,6 +98,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-FR029
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: FOTB-IT008
     set_name: Force of the Breaker
@@ -105,12 +117,20 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-IT029
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SGX1-PTH01
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-PT029
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: FOTB-JP008
     set_name: Force of the Breaker
