--- a/data/cards/51339637.yaml
+++ b/data/cards/51339637.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-EN017
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SDSB-DE033
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-DE017
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: SDSB-FR033
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-FR017
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SDSB-IT033
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-IT017
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SDSB-PT033
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-PT017
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: SD35-JP033
     set_name: 'Structure Deck: Soulburner'
