--- a/data/cards/64178424.yaml
+++ b/data/cards/64178424.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-EN049
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SOFU-DE053
     set_name: Soul Fusion
@@ -74,6 +78,10 @@ sets:
     - Ultra Rare
   - set_number: MP19-DE196
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-DE049
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -93,6 +101,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-FR049
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SOFU-IT053
     set_name: Soul Fusion
@@ -110,6 +122,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-IT049
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SOFU-PT053
     set_name: Soul Fusion
@@ -125,6 +141,10 @@ sets:
     - Ultra Rare
   - set_number: MP19-PT196
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-PT049
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
