--- a/data/cards/68144350.yaml
+++ b/data/cards/68144350.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-EN041
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: LTGY-DE019
     set_name: Lord of the Tachyon Galaxy
@@ -62,6 +66,10 @@ sets:
     - Common
   - set_number: MP14-DE005
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-DE041
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -73,6 +81,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-FR041
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: LTGY-IT019
     set_name: Lord of the Tachyon Galaxy
@@ -82,6 +94,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-IT041
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: LTGY-PT019
     set_name: Lord of the Tachyon Galaxy
@@ -89,6 +105,10 @@ sets:
     - Common
   - set_number: MP14-PT005
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-PT041
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
