--- a/data/cards/69537999.yaml
+++ b/data/cards/69537999.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LD10-EN030
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE040
     set_name: Force of the Breaker
@@ -74,6 +78,10 @@ sets:
     - Common
   - set_number: SGX1-DEH14
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: LD10-DE030
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -93,6 +101,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LD10-FR030
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: FOTB-IT040
     set_name: Force of the Breaker
@@ -110,6 +122,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LD10-IT030
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SDOK-PT025
     set_name: Onslaught of the Fire Kings Structure Deck
@@ -117,6 +133,10 @@ sets:
     - Common
   - set_number: SGX1-PTH14
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: LD10-PT030
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
