--- a/data/cards/71921856.yaml
+++ b/data/cards/71921856.yaml
@@ -62,26 +62,46 @@ sets:
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-EN044
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   de:
   - set_number: WSUP-DE014
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-DE044
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   fr:
   - set_number: WSUP-FR014
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-FR044
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   it:
   - set_number: WSUP-IT014
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-IT044
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   pt:
   - set_number: WSUP-PT014
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-PT044
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   ja:
   - set_number: PRIO-JP089
     set_name: Primal Origin
