--- a/data/cards/85121942.yaml
+++ b/data/cards/85121942.yaml
@@ -79,6 +79,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: LD10-EN043
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: LTGY-DE052
     set_name: Lord of the Tachyon Galaxy
@@ -89,6 +93,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: LD10-DE043
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: LTGY-FR052
     set_name: Lord of the Tachyon Galaxy
@@ -99,6 +107,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: LD10-FR043
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: LTGY-IT052
     set_name: Lord of the Tachyon Galaxy
@@ -109,6 +121,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: LD10-IT043
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: LTGY-PT052
     set_name: Lord of the Tachyon Galaxy
@@ -119,6 +135,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: LD10-PT043
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: LTGY-JP052
     set_name: Lord of the Tachyon Galaxy
