--- a/data/cards/14812471.yaml
+++ b/data/cards/14812471.yaml
@@ -61,26 +61,46 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-EN012
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   de:
   - set_number: SDSB-DE043
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-DE012
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   fr:
   - set_number: SDSB-FR043
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-FR012
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   it:
   - set_number: SDSB-IT043
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-IT012
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   pt:
   - set_number: SDSB-PT043
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-PT012
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   ja:
   - set_number: SD35-JPP02
     set_name: 'Structure Deck: Soulburner Extra Deck Enhancement Pack'
