--- a/data/cards/26889158.yaml
+++ b/data/cards/26889158.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: LD10-EN008
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SDSB-DE003
     set_name: 'Structure Deck: Soulburner'
@@ -63,6 +67,10 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: LD10-DE008
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: SDSB-FR003
     set_name: 'Structure Deck: Soulburner'
@@ -72,6 +80,10 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: LD10-FR008
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SDSB-IT003
     set_name: 'Structure Deck: Soulburner'
@@ -81,6 +93,10 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: LD10-IT008
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SDSB-PT003
     set_name: 'Structure Deck: Soulburner'
@@ -90,6 +106,10 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: LD10-PT008
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: SD35-JP003
     set_name: 'Structure Deck: Soulburner'
