--- a/data/cards/41463181.yaml
+++ b/data/cards/41463181.yaml
@@ -78,6 +78,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-EN011
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SOFU-DE040
     set_name: Soul Fusion
@@ -95,6 +99,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-DE011
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: SOFU-FR040
     set_name: Soul Fusion
@@ -112,6 +120,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-FR011
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SOFU-IT040
     set_name: Soul Fusion
@@ -129,6 +141,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-IT011
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SOFU-PT040
     set_name: Soul Fusion
@@ -146,6 +162,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-PT011
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: SOFU-JP040
     set_name: Soul Fusion
