--- a/data/cards/46898368.yaml
+++ b/data/cards/46898368.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: LD10-EN016
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: ETCO-DE057
     set_name: Eternity Code
@@ -65,6 +69,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: LD10-DE016
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: ETCO-FR057
     set_name: Eternity Code
@@ -74,6 +82,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: LD10-FR016
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: ETCO-IT057
     set_name: Eternity Code
@@ -83,6 +95,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: LD10-IT016
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: ETCO-PT057
     set_name: Eternity Code
@@ -92,6 +108,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: LD10-PT016
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: ETCO-JP057
     set_name: Eternity Code
