--- a/data/cards/52155219.yaml
+++ b/data/cards/52155219.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: LD10-EN014
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SDSB-DE023
     set_name: 'Structure Deck: Soulburner'
@@ -83,6 +87,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: LD10-DE014
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: SDSB-FR023
     set_name: 'Structure Deck: Soulburner'
@@ -92,6 +100,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: LD10-FR014
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SDSB-IT023
     set_name: 'Structure Deck: Soulburner'
@@ -101,6 +113,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: LD10-IT014
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SDSB-PT023
     set_name: 'Structure Deck: Soulburner'
@@ -110,6 +126,10 @@ sets:
     set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
+  - set_number: LD10-PT014
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: SD35-JP023
     set_name: 'Structure Deck: Soulburner'
