--- a/data/cards/52277807.yaml
+++ b/data/cards/52277807.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-EN009
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SDSB-DE004
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-DE009
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: SDSB-FR004
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-FR009
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SDSB-IT004
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-IT009
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SDSB-PT004
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Super Rare
+  - set_number: LD10-PT009
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: SD35-JP004
     set_name: 'Structure Deck: Soulburner'
