--- a/data/cards/59627393.yaml
+++ b/data/cards/59627393.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: LD10-EN042
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: LTGY-DE051
     set_name: Lord of the Tachyon Galaxy
@@ -77,6 +81,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: LD10-DE042
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: LTGY-FR051
     set_name: Lord of the Tachyon Galaxy
@@ -86,6 +94,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: LD10-FR042
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: LTGY-IT051
     set_name: Lord of the Tachyon Galaxy
@@ -95,6 +107,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: LD10-IT042
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: LTGY-PT051
     set_name: Lord of the Tachyon Galaxy
@@ -104,6 +120,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: LD10-PT042
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: LTGY-JP051
     set_name: Lord of the Tachyon Galaxy
