--- a/data/cards/63014935.yaml
+++ b/data/cards/63014935.yaml
@@ -50,9 +50,17 @@ sets:
     set_name: Light of Destruction
     rarities:
     - Common
+  - set_number: LD10-EN028
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: LODT-DE005
     set_name: Light of Destruction
+    rarities:
+    - Common
+  - set_number: LD10-DE028
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -60,9 +68,22 @@ sets:
     set_name: Light of Destruction
     rarities:
     - Common
+  - set_number: LD10-FR028
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: LODT-IT005
     set_name: Light of Destruction
+    rarities:
+    - Common
+  - set_number: LD10-IT028
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
+  pt:
+  - set_number: LD10-PT028
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
