--- a/data/cards/69750546.yaml
+++ b/data/cards/69750546.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: Astral Pack Seven
     rarities:
     - Common
+  - set_number: LD10-EN026
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE010
     set_name: Force of the Breaker
@@ -61,6 +65,10 @@ sets:
     - Common
   - set_number: AP07-DE017
     set_name: Astral Pack Seven
+    rarities:
+    - Common
+  - set_number: LD10-DE026
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -72,6 +80,10 @@ sets:
     set_name: Astral Pack Seven
     rarities:
     - Common
+  - set_number: LD10-FR026
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: FOTB-IT010
     set_name: Force of the Breaker
@@ -81,9 +93,17 @@ sets:
     set_name: Astral Pack Seven
     rarities:
     - Common
+  - set_number: LD10-IT026
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: AP07-PT017
     set_name: Astral Pack Seven
+    rarities:
+    - Common
+  - set_number: LD10-PT026
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
