--- a/data/cards/76459806.yaml
+++ b/data/cards/76459806.yaml
@@ -68,6 +68,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-EN027
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   - set_number: DT05-EN059
     set_name: Duel Terminal 5b
     rarities:
@@ -94,6 +98,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-DE027
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   fr:
   - set_number: FOTB-FRSP1
     set_name: Force of the Breaker Sneak Peek Participation Card
@@ -116,6 +124,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-FR027
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   it:
   - set_number: FOTB-ITSP1
     set_name: Force of the Breaker Sneak Peek Participation Card
@@ -138,6 +150,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-IT027
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   pt:
   - set_number: SDOK-PT013
     set_name: Onslaught of the Fire Kings Structure Deck
@@ -148,6 +164,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: LD10-PT027
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   ja:
   - set_number: JF08-JP002
     set_name: Jump Festa 2008 promotional cards
