--- a/data/cards/79867938.yaml
+++ b/data/cards/79867938.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-EN039
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: LTGY-DE016
     set_name: Lord of the Tachyon Galaxy
@@ -62,6 +66,10 @@ sets:
     - Common
   - set_number: MP14-DE002
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-DE039
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -73,6 +81,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-FR039
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: LTGY-IT016
     set_name: Lord of the Tachyon Galaxy
@@ -82,6 +94,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: LD10-IT039
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: LTGY-PT016
     set_name: Lord of the Tachyon Galaxy
@@ -89,6 +105,10 @@ sets:
     - Common
   - set_number: MP14-PT002
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: LD10-PT039
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
