--- a/data/cards/87327776.yaml
+++ b/data/cards/87327776.yaml
@@ -60,26 +60,46 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-EN010
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SDSB-DE042
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-DE010
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: SDSB-FR042
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-FR010
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SDSB-IT042
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-IT010
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SDSB-PT042
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Ultra Rare
+  - set_number: LD10-PT010
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: SD35-JPP01
     set_name: 'Structure Deck: Soulburner Extra Deck Enhancement Pack'
@@ -89,6 +109,7 @@ sets:
   - set_number: DP28-JP010
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: SD35-KRP01
     set_name: 'Structure Deck: Soulburner Extra Deck Enhancement Pack'
