--- a/data/cards/87871125.yaml
+++ b/data/cards/87871125.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: LD10-EN000
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ghost Rare
   de:
   - set_number: SAST-DE048
     set_name: Savage Strike
@@ -90,6 +94,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: LD10-DE000
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ghost Rare
   fr:
   - set_number: SAST-FR048
     set_name: Savage Strike
@@ -107,6 +115,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: LD10-FR000
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ghost Rare
   it:
   - set_number: SAST-IT048
     set_name: Savage Strike
@@ -124,6 +136,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: LD10-IT000
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ghost Rare
   pt:
   - set_number: SAST-PT048
     set_name: Savage Strike
@@ -141,6 +157,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: LD10-PT000
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ghost Rare
   ja:
   - set_number: SAST-JP048
     set_name: Savage Strike
