--- a/data/cards/89662401.yaml
+++ b/data/cards/89662401.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: LD10-EN048
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SDSB-DE005
     set_name: 'Structure Deck: Soulburner'
@@ -71,6 +75,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: LD10-DE048
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: SDSB-FR005
     set_name: 'Structure Deck: Soulburner'
@@ -84,6 +92,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: LD10-FR048
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SDSB-IT005
     set_name: 'Structure Deck: Soulburner'
@@ -97,6 +109,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: LD10-IT048
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SDSB-PT005
     set_name: 'Structure Deck: Soulburner'
@@ -110,6 +126,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: LD10-PT048
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: SD35-JP005
     set_name: 'Structure Deck: Soulburner'
