--- a/data/cards/94620082.yaml
+++ b/data/cards/94620082.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-EN046
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: SOFU-DE003
     set_name: Soul Fusion
@@ -71,6 +75,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-DE046
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: SOFU-FR003
     set_name: Soul Fusion
@@ -84,6 +92,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-FR046
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: SOFU-IT003
     set_name: Soul Fusion
@@ -97,6 +109,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-IT046
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SOFU-PT003
     set_name: Soul Fusion
@@ -110,6 +126,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: LD10-PT046
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: SOFU-JP003
     set_name: Soul Fusion
