--- a/data/cards/54514594.yaml
+++ b/data/cards/54514594.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LD10-EN052
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE013
     set_name: Force of the Breaker
@@ -61,6 +65,10 @@ sets:
     - Common
   - set_number: SGX1-DEH09
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: LD10-DE052
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -72,6 +80,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LD10-FR052
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: FOTB-IT013
     set_name: Force of the Breaker
@@ -81,9 +93,17 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: LD10-IT052
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: SGX1-PTH09
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: LD10-PT052
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
