--- a/data/cards/60303245.yaml
+++ b/data/cards/60303245.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: LD10-EN051
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   de:
   - set_number: BLHR-DE054
     set_name: "Battles of Legend: Hero's Revenge"
@@ -79,6 +83,10 @@ sets:
     - Ultra Rare
   - set_number: MGED-DE144
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: LD10-DE051
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Rare
   fr:
@@ -94,6 +102,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: LD10-FR051
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   it:
   - set_number: BLHR-IT054
     set_name: "Battles of Legend: Hero's Revenge"
@@ -107,6 +119,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: LD10-IT051
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   pt:
   - set_number: BLHR-PT054
     set_name: "Battles of Legend: Hero's Revenge"
@@ -118,6 +134,10 @@ sets:
     - Ultra Rare
   - set_number: MGED-PT144
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: LD10-PT051
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Rare
   ja:
