--- a/data/cards/92219931.yaml
+++ b/data/cards/92219931.yaml
@@ -8,7 +8,7 @@ name:
   it: Perdita Simultanea
   pt:
   ja: <ruby>二<rt>に</rt></ruby><ruby>者<rt>しゃ</rt></ruby><ruby>一<rt>いち</rt></ruby><ruby>両<rt>りょう</rt></ruby><ruby>損<rt>ぞん</rt></ruby>
-  ja_romaji: Nisha'ichi Ryōzon
+  ja_romaji: Nisha Ichiryōzon
   ko: 양자손실
   ko_rr:
   zh-TW:
