--- a/data/cards/23232295.yaml
+++ b/data/cards/23232295.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Rare
+  - set_number: LD10-EN057
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   de:
   - set_number: LTGY-DE050
     set_name: Lord of the Tachyon Galaxy
@@ -78,6 +82,10 @@ sets:
     set_name: Yu-Gi-Oh! Advent Calendar ZEXAL Edition
     rarities:
     - Super Rare
+  - set_number: LD10-DE057
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   fr:
   - set_number: LTGY-FR050
     set_name: Lord of the Tachyon Galaxy
@@ -85,6 +93,10 @@ sets:
     - Rare
   - set_number: MP14-FR027
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Rare
+  - set_number: LD10-FR057
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Rare
   it:
@@ -96,6 +108,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Rare
+  - set_number: LD10-IT057
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   pt:
   - set_number: LTGY-PT050
     set_name: Lord of the Tachyon Galaxy
@@ -103,6 +119,10 @@ sets:
     - Rare
   - set_number: MP14-PT027
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Rare
+  - set_number: LD10-PT057
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Rare
   ja:
