--- a/data/cards/35537251.yaml
+++ b/data/cards/35537251.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-EN056
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   de:
   - set_number: WSUP-DE013
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-DE056
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   fr:
   - set_number: WSUP-FR013
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-FR056
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   it:
   - set_number: WSUP-IT013
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-IT056
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   pt:
   - set_number: WSUP-PT013
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-PT056
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   ja:
   - set_number: PRIO-JP088
     set_name: Primal Origin
