--- a/data/cards/86325573.yaml
+++ b/data/cards/86325573.yaml
@@ -50,9 +50,17 @@ sets:
     set_name: Primal Origin
     rarities:
     - Common
+  - set_number: LD10-EN055
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: PRIO-DE008
     set_name: Primal Origin
+    rarities:
+    - Common
+  - set_number: LD10-DE055
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -60,14 +68,26 @@ sets:
     set_name: Primal Origin
     rarities:
     - Common
+  - set_number: LD10-FR055
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: PRIO-IT008
     set_name: Primal Origin
     rarities:
     - Common
+  - set_number: LD10-IT055
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: PRIO-PT008
     set_name: Primal Origin
+    rarities:
+    - Common
+  - set_number: LD10-PT055
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
