--- a/rush.yaml
+++ b/rush.yaml
@@ -44383,7 +44383,7 @@ effect_types:
 effect:
   en: |-
     ● This card gains ATK equal to [the number of different Attributes in both players' Graveyards] x 400 until the end of this turn.
-    ● Shuffle 1 monster from your Graveyard into the Deck, then draw 1 card.
+    ● Shuffle 1 monster from your Graveyard into the Deck. Then, you can draw 1 card.
   de:
   es:
   fr:
