--- a/data/cards/08316565.yaml
+++ b/data/cards/08316565.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-EN060
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: WSUP-DE015
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-DE060
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   fr:
   - set_number: WSUP-FR015
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-FR060
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: WSUP-IT015
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-IT060
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: WSUP-PT015
     set_name: World Superstars
     rarities:
     - Super Rare
+  - set_number: LD10-PT060
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   ja:
   - set_number: PRIO-JP090
     set_name: Primal Origin
