--- a/data/cards/86049351.yaml
+++ b/data/cards/86049351.yaml
@@ -50,9 +50,17 @@ sets:
     set_name: Primal Origin
     rarities:
     - Common
+  - set_number: LD10-EN059
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   de:
   - set_number: PRIO-DE071
     set_name: Primal Origin
+    rarities:
+    - Common
+  - set_number: LD10-DE059
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   fr:
@@ -60,14 +68,26 @@ sets:
     set_name: Primal Origin
     rarities:
     - Common
+  - set_number: LD10-FR059
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   it:
   - set_number: PRIO-IT071
     set_name: Primal Origin
     rarities:
     - Common
+  - set_number: LD10-IT059
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Common
   pt:
   - set_number: PRIO-PT071
     set_name: Primal Origin
+    rarities:
+    - Common
+  - set_number: LD10-PT059
+    set_name: 'Legendary Duelists: Soulburning Volcano'
     rarities:
     - Common
   ja:
