--- a/data/cards/38572779.yaml
+++ b/data/cards/38572779.yaml
@@ -3,10 +3,10 @@ password: 38572779
 name:
   en: Miscellaneousaurus
   de: Verschiedosaurier
-  es: Misceláneosaurio
+  es: Misceláneousaurio
   fr: Divernosaure
   it: Mistosauro
-  pt: Miscelaneossauro
+  pt: Miscelaneussauro
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>創<rt>そう</rt></ruby>のミセラサウルス
   ja_romaji: Gensō no Miserasaurusu
   ko: 환창의 미세라사우루스
