--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -270,7 +270,7 @@
   pt: Saquepatrollha
   ja: <ruby>海造賊<rt>プランドロール</rt></ruby>
   ja_romaji: Purandorōru
-  ko:
+  ko: 플런드롤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -678,7 +678,7 @@
   pt: Springans
   ja: スプリガンズ
   ja_romaji: Supuriganzu
-  ko:
+  ko: 스프리건즈
   ko_rr:
   zh-TW:
   zh-CN: 守宝团
@@ -846,7 +846,7 @@
   pt: Miutante
   ja: ミュートリア
   ja_romaji: Myūtoria
-  ko:
+  ko: 뮤트리아
   ko_rr:
   zh-TW:
   zh-CN:
@@ -1650,7 +1650,7 @@
   pt: Espelho Onírico
   ja: <ruby>夢<rt>ゆめ</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>鏡<rt>きょう</rt></ruby>
   ja_romaji: Yumemakyō
-  ko:
+  ko: 몽마경
   ko_rr:
   zh-TW:
   zh-CN: 梦魔镜
@@ -1818,7 +1818,7 @@
   pt: Materriator
   ja: マテリアクトル
   ja_romaji: Materiakutoru
-  ko:
+  ko: 머티리어크톨
   ko_rr:
   zh-TW:
   zh-CN:
@@ -2007,10 +2007,10 @@
   es: Espíritu Místico del Bosque
   fr: Esprit Mystique de la Forêt
   it: Spirito Mistico della Foresta
-  pt:
+  pt: Espírito Místico da Floresta
   ja: <ruby>森<rt>もり</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>霊<rt>れい</rt></ruby>
   ja_romaji: Mori no Seirei
-  ko:
+  ko: 숲의 성령
   ko_rr:
   zh-TW:
   zh-CN:
@@ -2622,7 +2622,7 @@
   pt: Adamancipador
   ja: アダマシア
   ja_romaji: Adamashia
-  ko:
+  ko: 아다마시아
   ko_rr:
   zh-TW:
   zh-CN:
@@ -2963,15 +2963,15 @@
   zh-TW:
   zh-CN:
 - en: Nemleria
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Nemleria
+  es: Nemleria
+  fr: Nemleria
+  it: Nemleria
+  pt: Nemleria
   ja: ネムレリア
   ja_romaji: Nemureria
-  ko:
-  ko_rr:
+  ko: 네무렐리아
+  ko_rr: Nemurellia
   zh-TW:
   zh-CN:
 - en: Inmato
@@ -3078,7 +3078,7 @@
   pt: Caverguerra
   ja: ウォークライ
   ja_romaji: Wōkurai
-  ko:
+  ko: 워크라이
   ko_rr:
   zh-TW:
   zh-CN:
@@ -3282,8 +3282,8 @@
   pt: Hyperion
   ja: ヒュペリオン
   ja_romaji: Hyuperion
-  ko:
-  ko_rr:
+  ko: 히페리온
+  ko_rr: Hiperion
   zh-TW:
   zh-CN:
 - en: Jinzo
@@ -3942,7 +3942,7 @@
   pt: Melffy
   ja: メルフィー
   ja_romaji: Merufī
-  ko:
+  ko: 메르피
   ko_rr:
   zh-TW:
   zh-CN:
@@ -4170,7 +4170,7 @@
   pt: Rikka
   ja: <ruby>六<rt>りっ</rt></ruby><ruby>花<rt>か</rt></ruby>
   ja_romaji: Rikka
-  ko:
+  ko: 육화
   ko_rr:
   zh-TW:
   zh-CN:
@@ -5418,7 +5418,7 @@
   pt: Dois Avatares
   ja: <ruby>双<rt>そう</rt></ruby><ruby>天<rt>てん</rt></ruby>
   ja_romaji: Sōten
-  ko:
+  ko: 쌍천
   ko_rr:
   zh-TW:
   zh-CN:
@@ -5490,7 +5490,7 @@
   pt: Tri-Brigada
   ja: トライブリゲード
   ja_romaji: Toraiburigēdo
-  ko:
+  ko: 트라이브리게이드
   ko_rr:
   zh-TW:
   zh-CN: 铁兽
@@ -5538,10 +5538,10 @@
   pt: Portão do Mundo Virtual
   ja: <ruby>電<rt>でん</rt></ruby><ruby>脳<rt>のう</rt></ruby><ruby>堺<rt>かい</rt></ruby><ruby>門<rt>もん</rt></ruby>
   ja_romaji: Dennōkaimon
-  ko:
+  ko: 전뇌계문
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 电脑堺门
 - en: Fossil
   de: Fossil
   es: Fósil
@@ -5747,14 +5747,14 @@
   zh-TW:
   zh-CN:
 - en: Puppet
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Puppen
+  es: Marioneta
+  fr: Poupée
+  it: Burattino
+  pt: Marionete
   ja: パペット
   ja_romaji: Papetto
-  ko:
+  ko: 퍼핏
   ko_rr:
   zh-TW:
   zh-CN:
@@ -6018,7 +6018,7 @@
   pt: Eldlixir
   ja: エルドリクシル
   ja_romaji: Erudorikushiru
-  ko:
+  ko: 엘드릭시르
   ko_rr:
   zh-TW:
   zh-CN:
