--- a/data/rush/yugipedia1001559.yaml
+++ b/data/rush/yugipedia1001559.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: See-Through Harvey
+  en: All-Seeing Harvey
   de:
   es:
   fr:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの裏側表示のカード１枚を選んで確認する。そのカードがモンスターカード（守備力１５００以上）だった場合、さらにそのカードを破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +46,7 @@ atk: 1300
 def: 1000
 images:
 - index: 1
-  image: SeeThroughHarvey-RDKP14-JP-OP.png
+  image: AllSeeingHarvey-RDKP14-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP14-JP040
