--- a/rush.yaml
+++ b/rush.yaml
@@ -109517,7 +109517,7 @@ yugipedia_page_id: 1001366
 ---
 konami_id:
 name:
-  en: See-Through Harvey
+  en: All-Seeing Harvey
   de:
   es:
   fr:
@@ -109537,7 +109537,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -109549,7 +109550,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの裏側表示のカード１枚を選んで確認する。そのカードがモンスターカード（守備力１５００以上）だった場合、さらにそのカードを破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -109561,7 +109563,7 @@ atk: 1300
 def: 1000
 images:
 - index: 1
-  image: SeeThroughHarvey-RDKP14-JP-OP.png
+  image: AllSeeingHarvey-RDKP14-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP14-JP040
