--- a/data/cards/26082117.yaml
+++ b/data/cards/26082117.yaml
@@ -76,6 +76,9 @@ sets:
     set_name: Premium Gold
     rarities:
     - Gold Rare
+  - set_number: ????-EN???
+    set_name: 2-Player Starter Set
+    rarities:
   de:
   - set_number: GENF-DE001
     set_name: Generation Force
