--- a/data/cards/70095154.yaml
+++ b/data/cards/70095154.yaml
@@ -169,6 +169,9 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
     - Quarter Century Secret Rare
+  - set_number: ????-EN???
+    set_name: 2-Player Starter Set
+    rarities:
   - set_number: MF03-EN009
     set_name: 'Mattel Action Figure promotional cards: Series 3'
     rarities:
