--- a/data/cards/90448279.yaml
+++ b/data/cards/90448279.yaml
@@ -72,6 +72,9 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: ????-EN???
+    set_name: 2-Player Starter Set
+    rarities:
   de:
   - set_number: PHRA-DE045
     set_name: Phantom Rage
