--- a/data/cards/06901008.yaml
+++ b/data/cards/06901008.yaml
@@ -48,6 +48,9 @@ sets:
     set_name: Primal Origin
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: 2-Player Starter Set
+    rarities:
   de:
   - set_number: PRIO-DE091
     set_name: Primal Origin
