--- a/data/cards/23571046.yaml
+++ b/data/cards/23571046.yaml
@@ -76,6 +76,9 @@ sets:
     set_name: 'Legendary Duelists: Synchro Storm'
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: 2-Player Starter Set
+    rarities:
   - set_number: DT07-EN007
     set_name: Duel Terminal 7a
     rarities:
