--- a/data/cards/78651105.yaml
+++ b/data/cards/78651105.yaml
@@ -77,6 +77,9 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: 2-Player Starter Set
+    rarities:
   - set_number: JUMP-EN032
     set_name: Shonen Jump Vol. 7, Issue 6 promotional card
     rarities:
