--- a/data/rush/16929.yaml
+++ b/data/rush/16929.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or lower Normal Monster from your Graveyard face-up to your field, then you can add 1 "Fusion" from your Graveyard to your hand.
+    Special Summon 1 Level 5 or lower Normal Monster from your Graveyard face-up to your field. Then, you can add 1 "Fusion" from your Graveyard to your hand.
   de:
   es:
   fr:
