--- a/data/rush/17483.yaml
+++ b/data/rush/17483.yaml
@@ -37,6 +37,7 @@ series:
 images:
 - index: 1
   image: TransamuRainac-RDSD01-JP-C.png
+  illustration: TransamuRainac-G002-JP-VG-artwork.png
 - index: 2
   image: TransamuRainac-RD711B-JP-NPR.png
 sets:
