--- a/rush.yaml
+++ b/rush.yaml
@@ -46619,7 +46619,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or lower Normal Monster from your Graveyard face-up to your field, then you can add 1 "Fusion" from your Graveyard to your hand.
+    Special Summon 1 Level 5 or lower Normal Monster from your Graveyard face-up to your field. Then, you can add 1 "Fusion" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -47193,7 +47193,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return 1 face-up non-Level 3 Spellcaster Type monster from either side of the field to the hand. Then, if you returned "Sevens Road Magician" to the hand by this effect, you can draw 1 card.
+    Return 1 face-up non-Level 3 Spellcaster Type monster from either side of the field to the owner's hand. Then, if you returned "Sevens Road Magician" to the hand by this effect, you can draw 1 card.
   de:
   es:
   fr:
@@ -59972,6 +59972,7 @@ series:
 images:
 - index: 1
   image: TransamuRainac-RDSD01-JP-C.png
+  illustration: TransamuRainac-G002-JP-VG-artwork.png
 - index: 2
   image: TransamuRainac-RD711B-JP-NPR.png
 sets:
@@ -68427,7 +68428,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up DARK Attribute Spellcaster Type monsters on your field cannot be destroyed by your opponent's card effects this turn. If you have "Sevens Road Magician" in your Graveyard, you can change that opponent's Normal Summoned monster to face-up Defense Position.
+    All face-up DARK Attribute Spellcaster Type monsters on your field cannot be destroyed by your opponent's card effects this turn. Then, if you have "Sevens Road Magician" in your Graveyard, you can change that opponent's Normal Summoned monster to face-up Defense Position.
   de:
   es:
   fr:
