--- a/data/cards/35952884.yaml
+++ b/data/cards/35952884.yaml
@@ -112,6 +112,10 @@ sets:
     rarities:
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: DUNE-KRS01
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Quarter Century Secret Rare
   zh-CN:
   - set_number: CL02-SC182
     set_name: Classic Pack 02
