--- a/data/cards/11654067.yaml
+++ b/data/cards/11654067.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Send 1 Pyro monster from your Deck to the GY, then, if you sent a "Volcanic" monster to the GY, you can apply 1 of these effects.
     ● Inflict damage to your opponent equal to its Level x 100.
-    ● Special Summon 1 "Bomb Token" (FIRE/Pyro/Level 1/ATK 1000/DEF 1000) to your opponent's field. Each time 1 is destroyed, its controller takes 500 damage.
+    ● Special Summon 1 "Bomb Token" (Pyro/FIRE/Level 1/ATK 1000/DEF 1000) to your opponent's field. Each time 1 is destroyed, its controller takes 500 damage.
     You can only activate 1 "Fire Ejection" per turn.
   de:
   es:
