--- a/rush.yaml
+++ b/rush.yaml
@@ -68428,7 +68428,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up DARK Attribute Spellcaster Type monsters on your field cannot be destroyed by your opponent's card effects this turn. Then, if you have "Sevens Road Magician" in your Graveyard, you can change that opponent's Normal Summoned monster to face-up Defense Position.
+    All face-up DARK Attribute Spellcaster Type monsters on your field cannot be destroyed by your opponent's card effects this turn. If you have "Sevens Road Magician" in your Graveyard, you can change that opponent's Normal Summoned monster to face-up Defense Position.
   de:
   es:
   fr:
@@ -110347,6 +110347,62 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 975311
+---
+konami_id:
+name:
+  en: Cat-trois Choice
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: キャットロワ チョイス
+  ja_romaji: Kyattorowa Choisu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Your opponent has a monster on their field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard. Then, if you have 3 or less monsters in your Graveyard, you can add 1 card from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: CattroisChoice-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP055
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 975588
 ---
 konami_id:
 name:
