--- a/data/cards/09523599.yaml
+++ b/data/cards/09523599.yaml
@@ -93,7 +93,7 @@ sets:
     rarities:
     - Common
     - Starfoil Rare
-  - set_number: MP18-EN032
+  - set_number: MP18-FR032
     set_name: 2018 Mega-Tin Mega Pack
     rarities:
     - Common
