--- a/data/cards/20154092.yaml
+++ b/data/cards/20154092.yaml
@@ -65,6 +65,11 @@ sets:
     set_name: Number Hunters
     rarities:
     - Super Rare
+  pt:
+  - set_number: NUMH-PT002
+    set_name: Number Hunters
+    rarities:
+    - Super Rare
   ja:
   - set_number: CPZ1-JP002
     set_name: 'Collectors Pack: ZEXAL Version'
