--- a/data/cards/29216967.yaml
+++ b/data/cards/29216967.yaml
@@ -66,6 +66,11 @@ sets:
     set_name: Number Hunters
     rarities:
     - Super Rare
+  pt:
+  - set_number: NUMH-PT008
+    set_name: Number Hunters
+    rarities:
+    - Super Rare
   ja:
   - set_number: CPZ1-JP008
     set_name: 'Collectors Pack: ZEXAL Version'
