--- a/data/cards/38280762.yaml
+++ b/data/cards/38280762.yaml
@@ -6,7 +6,7 @@ name:
   es: Enishi, el Canciller de Shien
   fr: Enishi, Chancelier de Shien
   it: Enishi, Cancelliere di Shien
-  pt:
+  pt: Enishi, o Chanceler de Shien
   ja: <ruby>紫<rt>シ</rt></ruby><ruby>炎<rt>エン</rt></ruby>の<ruby>老<rt>ろう</rt></ruby><ruby>中<rt>じゅう</rt></ruby> エニシ
   ja_romaji: Shien no Rōjū Enishi
   ko: 시엔의 노중 에니시
@@ -24,7 +24,8 @@ text:
     Ni Invocable Normalement ni Posable Normalement. Uniquement Invocable Spécialement (depuis votre main) en bannissant 2 monstres "Six Samouraïs" depuis votre Cimetière. Une fois par tour : vous pouvez cibler 1 monstre face recto ; détruisez la cible. Cette carte ne peut pas attaquer le tour où cet effet est activé.
   it: |-
     Non può essere Evocato Normalmente/Posizionato. Deve essere Evocato Specialmente (dalla tua mano) bandendo 2 mostri "Sei Samurai" dal tuo Cimitero. Una volta per turno: puoi scegliere come bersaglio 1 mostro scoperto; distruggi quel bersaglio. Questa carta attaccare nel turno in cui questo effetto viene attivato.
-  pt:
+  pt: |-
+    Não pode ser Invocado por Invocação-Normal/Baixado. Deve ser Invocado por Invocação-Especial (da sua mão) ao banir 2 monstros "Seis Samurai" do seu Cemitério. Uma vez por turno: você pode escolher 1 monstro com a face para cima; destrua o alvo. Este card não pode atacar no turno em que este efeito for ativado.
   ja: |-
     このカードは通常召喚できない。自分の墓地の「六武衆」と名のついたモンスター２体をゲームから除外した場合のみ特殊召喚できる。１ターンに１度、フィールド上に表側表示で存在するモンスター１体を選択して破壊できる。この効果を発動するターン、このカードは攻撃宣言できない。
   ko: |-
@@ -145,6 +146,11 @@ sets:
     rarities:
     - Common
   - set_number: OP06-IT024
+    set_name: OTS Tournament Pack 6
+    rarities:
+    - Common
+  pt:
+  - set_number: OP06-PT024
     set_name: OTS Tournament Pack 6
     rarities:
     - Common
