--- a/data/cards/42921475.yaml
+++ b/data/cards/42921475.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: 'Invasion: Vengeance'
     rarities:
     - Short Print
+  - set_number: OP05-DE007
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: MP17-DE146
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
@@ -94,6 +98,10 @@ sets:
     set_name: 'Invasion: Vengeance'
     rarities:
     - Short Print
+  - set_number: OP05-FR007
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: MP17-FR146
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
@@ -111,6 +119,10 @@ sets:
     set_name: 'Invasion: Vengeance'
     rarities:
     - Short Print
+  - set_number: OP05-IT007
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: MP17-IT146
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
@@ -128,6 +140,10 @@ sets:
     set_name: 'Invasion: Vengeance'
     rarities:
     - Short Print
+  - set_number: OP05-PT007
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: MP17-PT146
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
