--- a/data/cards/56840427.yaml
+++ b/data/cards/56840427.yaml
@@ -172,7 +172,7 @@ sets:
     set_name: Starter Deck 2013
     rarities:
     - Super Rare
-  - set_number: VF16-JP007
+  - set_number: VF16-JPP07
     set_name: Jump Victory Carnival 2016 - Promotion Pack
     rarities:
     - Normal Parallel Rare
