--- a/data/cards/62962630.yaml
+++ b/data/cards/62962630.yaml
@@ -128,7 +128,7 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
-  - set_number: OP20-IT003
+  - set_number: OP20-PT003
     set_name: OTS Tournament Pack 20
     rarities:
     - Ultimate Rare
