--- a/data/cards/66337215.yaml
+++ b/data/cards/66337215.yaml
@@ -216,6 +216,10 @@ sets:
     set_name: 'Duelist Entry Deck VS: Saber Force'
     rarities:
     - Common
+  - set_number: SR02-KR006
+    set_name: 'Structure Deck R: Revival of the Great Divine Dragon'
+    rarities:
+    - Common
   zh-TW:
   - set_number: SD25-TC014
     set_name: "Structure Deck: The Blue-Eyed Dragon's Thundering Descent"
