--- a/data/cards/74003290.yaml
+++ b/data/cards/74003290.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: Raging Tempest
     rarities:
     - Rare
+  - set_number: OP05-DE012
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: MP17-DE220
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
@@ -100,6 +104,10 @@ sets:
     set_name: Raging Tempest
     rarities:
     - Rare
+  - set_number: OP05-FR012
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: MP17-FR220
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
@@ -126,6 +134,10 @@ sets:
     set_name: Raging Tempest
     rarities:
     - Rare
+  - set_number: OP05-IT012
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: MP17-IT220
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
@@ -152,6 +164,10 @@ sets:
     set_name: Raging Tempest
     rarities:
     - Rare
+  - set_number: OP05-PT012
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: MP17-PT220
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
