--- a/data/cards/88264978.yaml
+++ b/data/cards/88264978.yaml
@@ -292,6 +292,10 @@ sets:
     set_name: 'Structure Deck: Dragonic Legion'
     rarities:
     - Common
+  - set_number: SR02-KR008
+    set_name: 'Structure Deck R: Revival of the Great Divine Dragon'
+    rarities:
+    - Normal Parallel Rare
   - set_number: 20AP-KR047
     set_name: 20th Anniversary Pack 1st Wave
     rarities:
