--- a/data/cards/95166228.yaml
+++ b/data/cards/95166228.yaml
@@ -61,7 +61,7 @@ sets:
     rarities:
     - Rare
   fr:
-  - set_number: TAEV-EN022
+  - set_number: TAEV-FR022
     set_name: Tactical Evolution
     rarities:
     - Rare
