--- a/data/cards/35448319.yaml
+++ b/data/cards/35448319.yaml
@@ -53,7 +53,7 @@ sets:
     rarities:
     - Secret Rare
   fr:
-  - set_number: TSHD-EN083
+  - set_number: TSHD-FR083
     set_name: The Shining Darkness
     rarities:
     - Secret Rare
