--- a/data/cards/51316684.yaml
+++ b/data/cards/51316684.yaml
@@ -86,6 +86,10 @@ sets:
     set_name: Secrets of Eternity
     rarities:
     - Common
+  - set_number: MP15-PT207
+    set_name: 2015 Mega-Tin Mega Pack
+    rarities:
+    - Common
   ja:
   - set_number: SECE-JP017
     set_name: Secrets of Eternity
