--- a/data/cards/54178050.yaml
+++ b/data/cards/54178050.yaml
@@ -167,6 +167,10 @@ sets:
     set_name: "Structure Deck: Dragon's Roar"
     rarities:
     - Common
+  - set_number: SD19-KR035
+    set_name: 'Structure Deck: Dragunity Drive'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
