--- a/data/cards/55204071.yaml
+++ b/data/cards/55204071.yaml
@@ -66,6 +66,11 @@ sets:
     set_name: Number Hunters
     rarities:
     - Super Rare
+  pt:
+  - set_number: NUMH-PT009
+    set_name: Number Hunters
+    rarities:
+    - Super Rare
   ja:
   - set_number: CPZ1-JP009
     set_name: 'Collectors Pack: ZEXAL Version'
