--- a/data/cards/73125233.yaml
+++ b/data/cards/73125233.yaml
@@ -199,7 +199,7 @@ sets:
     rarities:
     - Super Rare
     - Ultimate Rare
-  - set_number: SD14-JP016
+  - set_number: SD14-KR016
     set_name: 'Structure Deck: Advent of the Emperor'
     rarities:
     - Common
