--- a/data/cards/79850798.yaml
+++ b/data/cards/79850798.yaml
@@ -74,11 +74,11 @@ sets:
     - Common
     - Starfoil Rare
   fr:
-  - set_number: GAOV-DE016
+  - set_number: GAOV-FR016
     set_name: Galactic Overlord
     rarities:
     - Rare
-  - set_number: NUMH-DE024
+  - set_number: NUMH-FR024
     set_name: Number Hunters
     rarities:
     - Super Rare
