--- a/data/cards/96235275.yaml
+++ b/data/cards/96235275.yaml
@@ -210,6 +210,10 @@ sets:
     set_name: 'Duelist Set: Version Lightlord Judgment'
     rarities:
     - Ultra Rare
+  - set_number: SR02-KR020
+    set_name: 'Structure Deck R: Revival of the Great Divine Dragon'
+    rarities:
+    - Common
   zh-TW:
   - set_number: SD22-TC016
     set_name: 'Structure Deck: Dragonic Legion'
