--- a/data/rush/16901.yaml
+++ b/data/rush/16901.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle up to 2 monsters from your opponent's Graveyard into the Deck, then you can make all face-up monsters on your opponent's field lose 500 ATK until the end of this turn.
+    Shuffle up to 2 monsters from your opponent's Graveyard into the Deck. Then, you can make all face-up monsters on your opponent's field lose 500 ATK until the end of this turn.
   de:
   es:
   fr:
