--- a/data/cards/97642679.yaml
+++ b/data/cards/97642679.yaml
@@ -8,7 +8,7 @@ name:
   it: Maestro Oscuro - Zorc
   pt: Mestre das Trevas - Zorc
   ja: <ruby>闇の支配者<rt>ダーク・マスター</rt></ruby>－ゾーク
-  ja_romaji: Dāku Masutā Zōku
+  ja_romaji: Dāku Masutā - Zōku
   ko: 어둠의 지배자－조크
   ko_rr:
   zh-TW:
