--- a/data/rush/17685.yaml
+++ b/data/rush/17685.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Psychic Musician
 images:
 - index: 1
   image: PsychicOmegaBlast-RDMRP1-JP-C.png
