--- a/data/rush/17687.yaml
+++ b/data/rush/17687.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Psychic Musician
 images:
 - index: 1
   image: FeaturingOmega-RDMRP1-JP-C.png
