--- a/rush.yaml
+++ b/rush.yaml
@@ -69097,6 +69097,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Psychic Musician
 images:
 - index: 1
   image: PsychicOmegaBlast-RDMRP1-JP-C.png
@@ -69227,6 +69229,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Psychic Musician
 images:
 - index: 1
   image: FeaturingOmega-RDMRP1-JP-C.png
