--- a/data/cards/01855886.yaml
+++ b/data/cards/01855886.yaml
@@ -76,7 +76,7 @@ sets:
     rarities:
     - Common
   ko:
-  - set_number: POTE-JP024
+  - set_number: POTE-KR024
     set_name: Power of the Elements
     rarities:
     - Common
