--- a/data/cards/11901678.yaml
+++ b/data/cards/11901678.yaml
@@ -240,6 +240,10 @@ sets:
     set_name: Metal Raiders
     rarities:
     - Ultra Rare
+  - set_number: TP3-KR004
+    set_name: 'Tournament Pack: 3rd Season'
+    rarities:
+    - Super Rare
   - set_number: BP1-KR153
     set_name: Beginner's Edition 1
     rarities:
