--- a/data/cards/26902560.yaml
+++ b/data/cards/26902560.yaml
@@ -184,6 +184,10 @@ sets:
     set_name: 'Duelist Pack: Jaden Yuki'
     rarities:
     - Common
+  - set_number: TP6-KR003
+    set_name: Tournament Pack 6
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
