--- a/data/cards/31553716.yaml
+++ b/data/cards/31553716.yaml
@@ -216,6 +216,10 @@ sets:
     set_name: Beginner's Edition 2
     rarities:
     - Super Rare
+  - set_number: TP6-KR006
+    set_name: Tournament Pack 6
+    rarities:
+    - Rare
   - set_number: ESP2-KR011
     set_name: Expansion Pack Vol.2
     rarities:
