--- a/data/cards/41855169.yaml
+++ b/data/cards/41855169.yaml
@@ -178,6 +178,10 @@ sets:
     set_name: Labyrinth of Nightmare
     rarities:
     - Rare
+  - set_number: TP5-KR011
+    set_name: Tournament Pack 5
+    rarities:
+    - Common
   - set_number: BP2-KR001
     set_name: Beginner's Edition 2
     rarities:
