--- a/data/cards/71283180.yaml
+++ b/data/cards/71283180.yaml
@@ -129,6 +129,10 @@ sets:
     set_name: Labyrinth of Nightmare
     rarities:
     - Rare
+  - set_number: TP5-KR012
+    set_name: Tournament Pack 5
+    rarities:
+    - Common
   - set_number: BP2-KR009
     set_name: Beginner's Edition 2
     rarities:
