--- a/data/cards/81843628.yaml
+++ b/data/cards/81843628.yaml
@@ -150,6 +150,10 @@ sets:
     set_name: 'Tournament Pack: 3rd Season'
     rarities:
     - Ultra Rare
+  - set_number: TP5-KR005
+    set_name: Tournament Pack 5
+    rarities:
+    - Super Rare
   - set_number: BP2-KR102
     set_name: Beginner's Edition 2
     rarities:
