--- a/data/rush/yugipedia1001665.yaml
+++ b/data/rush/yugipedia1001665.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドのモンスターが相手の攻撃または相手の効果で破壊された時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「竜騎士ガイア」またはモンスター（レベル５以下／ドラゴン族）１体を選び、自分フィールドに表側表示で特殊召喚する。このターン、この効果で特殊召喚したモンスターは相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
