--- a/rush.yaml
+++ b/rush.yaml
@@ -109263,6 +109263,68 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 937289
 ---
+konami_id: 19358
+name:
+  en: Fusionic Revivern
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: フュージョニック・リヴァイバーン
+  ja_romaji: Fyūjonikku Riwaibān
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During your Main Phase that you Fusion Summoned a monster, send this face-up card from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分がモンスターをフュージョン召喚した自分メインフェイズに、自分フィールドの表側表示のこのカードを墓地へ送って発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Then, you can Special Summon 1 High Dragon Type Fusion Monster from your Graveyard face-up to your field. If you Special Summoned a monster by this effect, you can add 1 "Fusion" or "Polymerization" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分は１枚ドローする。その後、自分の墓地のフュージョンモンスター（ハイドラゴン族）１体を選んで自分フィールドに表側表示で特殊召喚できる。この効果で特殊召喚した場合、さらに自分の墓地の「フュージョン」または「融合」１枚を選んで手札に加える事ができる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 1
+atk: 0
+def: 0
+images:
+- index: 1
+  image: FusionicRevivern-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP030
+    set_name: Saikyō Jump September 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 991886
+---
 konami_id:
 name:
   en: Landporter MAX
@@ -111501,68 +111563,6 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 991815
----
-konami_id:
-name:
-  en: Fusionic Revivern
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: フュージョニック・リヴァイバーン
-  ja_romaji: Fyūjonikku Riwaibān
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    During your Main Phase that you Fusion Summoned a monster, send this face-up card from your field to the Graveyard.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    自分がモンスターをフュージョン召喚した自分メインフェイズに、自分フィールドの表側表示のこのカードを墓地へ送って発動できる。
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Draw 1 card. Then, you can Special Summon 1 High Dragon Type Fusion Monster from your Graveyard face-up to your field. If you Special Summoned a monster by this effect, you can add 1 "Fusion" or "Polymerization" from your Graveyard to your hand.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    自分は１枚ドローする。その後、自分の墓地のフュージョンモンスター（ハイドラゴン族）１体を選んで自分フィールドに表側表示で特殊召喚できる。この効果で特殊召喚した場合、さらに自分の墓地の「フュージョン」または「融合」１枚を選んで手札に加える事ができる。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Dragon / Effect
-attribute: LIGHT
-level: 1
-atk: 0
-def: 0
-images:
-- index: 1
-  image: FusionicRevivern-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP030
-    set_name: Saikyō Jump September 2023 promotional card
-    rarities:
-    - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 991886
 ---
 konami_id:
 name:
