--- a/data/rush/19358.yaml
+++ b/data/rush/19358.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, you can Special Summon 1 High Dragon Type Fusion Monster from your Graveyard face-up to your field. If you Special Summoned a monster by this effect, you can add 1 "Fusion" or "Polymerization" from your Graveyard to your hand.
+    Draw 1 card. Then, you can Special Summon 1 High Dragon Type Fusion Monster from your Graveyard face-up to your field. Then, if you Special Summoned a monster by this effect, you can add 1 "Fusion" or "Polymerization" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ atk: 0
 def: 0
 images:
 - index: 1
-  image: FusionicRevivern-RDSJMP-JP-OP.png
+  image: FusionicRevivern-RDSJMP-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP030
