--- a/data/cards/25577965.yaml
+++ b/data/cards/25577965.yaml
@@ -1,5 +1,5 @@
 konami_id: 19076
-password:
+password: 25577965
 name:
   en: Flametongue the Blazing Magical Blade
   de:
@@ -38,7 +38,7 @@ atk: 1400
 materials: 2 FIRE monsters
 images:
 - index: 1
-  image: FlametonguetheBlazingMagicalBlade-YO07-JP-OP.png
+  image: FlametonguetheBlazingMagicalBlade-YO07-JP-UR.png
 sets:
   ja:
   - set_number: YO07-JP001
