--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -731,6 +731,10 @@ sets:
     set_name: History Archive Collection
     rarities:
     - Ultra Rare
+  - set_number: 2023-JPP01
+    set_name: Yu-Gi-Oh! World Championship 2023 attendance cards
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: MFC-KR000
     set_name: Magician's Force
