--- a/data/cards/62279055.yaml
+++ b/data/cards/62279055.yaml
@@ -517,6 +517,10 @@ sets:
     set_name: Duel Royale Deck Set EX
     rarities:
     - Common
+  - set_number: 2023-JPP02
+    set_name: Yu-Gi-Oh! World Championship 2023 attendance cards
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: LON-KR104
     set_name: Labyrinth of Nightmare
